<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/primaryBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        tools:context=".page.login.LoginActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/img_logo_with_text"
            android:contentDescription="@string/app_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:id="@+id/textView2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/sf_pro_bold"-->
<!--            android:text="@string/login"-->
<!--            android:textColor="?attr/colorSecondary"-->
<!--            android:textSize="24sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/logo"-->
<!--            app:layout_constraintStart_toStartOf="@+id/logo"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/logo" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/emailTextfieldLayout"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:text="@string/email"
                android:fontFamily="@font/sf_pro_bold"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/ed_login_email"
                android:layout_marginTop="8dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/baseline_alternate_email_24"
                android:drawableTint="@color/primary"

                android:padding="16dp"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:autofillHints="">
            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextfieldLayout"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/emailTextfieldLayout"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/password"
                    android:fontFamily="@font/sf_pro_bold"/>

                <com.archico.storyapp.component.MyEditText
                    android:layout_width="match_parent"
                    android:id="@+id/ed_login_password"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="16dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/sf_pro_regular"
                    android:padding="16dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:autofillHints="">

                </com.archico.storyapp.component.MyEditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextfieldLayout"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:id="@+id/loginButton"
                android:backgroundTint="@color/primary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:text="@string/dont_have_account"
                    android:fontFamily="@font/sf_pro_regular"/>
                <TextView
                    android:id="@+id/hyperlink_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/register_here"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:fontFamily="@font/sf_pro_bold"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
