<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_layers_24"
        app:showAsAction="ifRoom"
        android:title="@string/settings" >
        <menu>
            <item
                android:id="@+id/normal_landscape"
                android:title="@string/normal_type"
                app:showAsAction="never" />
            <item
                android:id="@+id/satellite_landscape"
                android:title="@string/satellite_type"
                app:showAsAction="never" />
            <item
                android:id="@+id/terrain_landscape"
                android:title="@string/terrain_type"
                app:showAsAction="never" />
            <item
                android:id="@+id/hybrid_landscape"
                android:title="@string/hybrid_type"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>